<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<properties>
		<javase.version>11</javase.version>
	</properties>

	<parent>
		<groupId>com.darwinsys</groupId>
		<artifactId>javasrc</artifactId>
		<version>1.1-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<artifactId>javasrc-ee</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>war</packaging>

	<name>javasrc - ee</name>
	<url>https://javacook.darwinsys.com</url>
	<description>Ian Darwin's collected Java EE Code Examples</description>

	<build>
		<plugins>
			<plugin>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>2.3.2</version>
			<configuration>
				<source>11</source>
				<target>11</target>
				<excludes>
					<!-- javax.ws.soap not in modern JDKs -->
					<exclude>jaxwsclient/CalcIntegTest.java</exclude>
					<!-- PDFLib Library is proprietary AND no Maven artifact, so give up -->
					<exclude>servlet/pdfcouponservlet/PDFCouponServlet.java</exclude>
					<!-- Add a comment WHY this is being excluded -->
					<exclude>servlet/TermsServletPDF.java</exclude>
					<!-- needs old Apache Axis toolkit for SOAP Web Service, we can use JAX-WS -->
					<exclude>websvcdemo/CallSoap.java</exclude>
				</excludes>
			</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>

	<!-- Java EE current full -->
	<dependency>
		<groupId>javax</groupId>	
		<artifactId>javaee-api</artifactId>	
		<version>8.0.1</version>
	</dependency> 

	<!-- Somehow needs jaxws on top?? -->
	<dependency>
		<groupId>com.sun.xml.ws</groupId>
		<artifactId>jaxws-ri</artifactId>
		<version>4.0.2</version>
		<type>pom</type>
	</dependency>

	<!-- My little add-ons to EE -->
	<dependency>
		<groupId>com.darwinsys</groupId>	
		<artifactId>darwinsys-ee</artifactId>	
		<version>${darwinsys-ee.version}</version>
	</dependency> 

	<!-- Client side of RMI -->
	<dependency>
		<groupId>org.jboss.spec.javax.rmi</groupId>
		<artifactId>jboss-rmi-api_1.0_spec</artifactId>
		<version>1.0.6.Final</version>
	</dependency>

	<!-- JAX-WS JDK 11+ needs this -->
	<dependency>
		<groupId>javax.jws</groupId>
		<artifactId>javax.jws-api</artifactId>
		<version>1.1</version>
	</dependency>
	<dependency>
		<groupId>com.sun.xml.ws</groupId>
		<artifactId>rt</artifactId>
		<version>4.0.2</version>
	</dependency>

	<!-- JPA needing a driver, let's use Hibernate -->
	<dependency>
		<groupId>org.hibernate.orm</groupId>
		<artifactId>hibernate-core</artifactId>
		<version>6.4.0.Final</version>
	</dependency>
	<dependency>
		<groupId>org.hibernate.orm</groupId>
		<artifactId>hibernate-entitymanager</artifactId>
		<version>6.0.0.Alpha7</version>
	</dependency>
	<dependency>
		<groupId>org.hibernate.validator</groupId>
		<artifactId>hibernate-validator</artifactId>
		<version>8.0.1.Final</version>
	</dependency>

	</dependencies>
</project>
